[tool.poetry]
name = "bas-remote-python"
version = "0.1.0"
description = "Python library, which allows you to automate Google Chrome browser via BAS software."
authors = ["CheshireCaat <you@example.com>"]
readme = "README.md"
packages = [{include = "bas_remote_python"}]

[tool.poetry.dependencies]
python = "^3.8"
dataclasses-json = ">=0.4.1"
filelock = ">=3.0.12"
websockets = ">=10.0"
aiofiles = ">=0.4.0"
aiohttp = ">=3.6.2"
pyee = ">=7.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

