[tool.poetry]
name = "bas-remote-python"
version = "0.1.0"
description = "Python library, which allows you to automate Google Chrome browser via BAS software."
authors = ["CheshireCaat <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
dataclasses-json = ">=0.4.1"
filelock = ">=3.0.12"
websockets = ">=10.0"
aiofiles = ">=0.4.0"
aiohttp = ">=3.6.2"
pyee = ">=7.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
