[tool.poetry]
name = "bas-remote-python"
version = "0.1.0"
description = "Python library, which allows you to automate Google Chrome browser via BAS software."
authors = ["CheshireCaat <cheshirecat902@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
dataclasses-json = "^0.5.7"
filelock = "^3.8.0"
websockets = "^10.3"
aiofiles = "^22.1.0"
aiohttp = "^3.8.1"
pyee = "^9.0.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
